--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,11 @@
 		    <artifactId>cglib</artifactId>
 		    <version>3.2.4</version>
 		</dependency>
-	</dependencies> 
+        <dependency>
+            <groupId>com.wittycat</groupId>
+            <artifactId>java</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
